SampleExample/angular-crud/angularcrud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angularcrud-svc
  namespace: deployment-angularcrud
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: angularcrud
